# HOBBIT-Space-Efficient-zkSNARK-with-Optimal-Prover-Time

./: CMakeLists.txt  MLP_test.sh  PC_tests.sh  README.md  pruned_MLP.sh  sql_test.sh  test_OurPC.sh  test_aes.sh  test_arb.sh  test_ourPC_buff.sh
src/: Blake3_hash.cpp  Blake3_hash.h  CMakeLists.txt  Elastic_PC.cpp  Elastic_PC.hpp  GKR.cpp  GKR.h  GKR_standard.cpp  GKR_standard.h  MLP_test.sh  Orion_prover.cpp  Orion_prover.h  Orion_verifier.cpp  Orion_verifier.h  Our_PC.cpp  Our_PC.hpp  PC_utils.cpp  PC_utils.h  Seval.cpp  Seval.h  Virgo.cpp  Virgo.h  circuit.cpp  circuit.h  config_pc.hpp  constants.h  expander.cpp  expanders.h  linear_code_encode.cpp  linear_code_encode.h  main.cpp  merkle_tree.cpp  merkle_tree.h  mimc.cpp  mimc.h  my_hhash.h  parameter.h  poly_commit.cpp  poly_commit.h  polynomial.cpp  (+38 more)
